--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -7,6 +7,7 @@
       "automergeStrategy": "merge-commit",
       "matchDepTypes": ["*"],
       "prCreation": "not-pending",
+      "prNotPendingHours": 1,
       "recreateWhen": "always"
     }
   ],
